--- a/SisFiespApplication/Views/Shared/_Layout.cshtml
+++ b/SisFiespApplication/Views/Shared/_Layout.cshtml
@@ -39,6 +39,12 @@
     <link rel="stylesheet" type="text/css" href="~/assets/css/style.css">
 
     <link rel="stylesheet" type="text/css" href="~/assets/css/jquery.mCustomScrollbar.css">
+
+    <!-- Data Table Css -->
+    <link rel="stylesheet" type="text/css" href="~/bower_components/datatables.net-bs4/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" type="text/css" href="~/assets/pages/data-table/css/buttons.dataTables.min.css">
+    <link rel="stylesheet" type="text/css" href="~/bower_components/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css">
+
 </head>
 
 <body>
@@ -419,13 +425,13 @@
                             <div class="">
 
                             </div>
-                            <div class="pcoded-search">
+                            @*<div class="pcoded-search">
                                 <span class="searchbar-toggle">  </span>
                                 <div class="pcoded-search-box ">
                                     <input type="text" placeholder="Pesquisar">
                                     <span class="search-icon"><i class="ti-search" aria-hidden="true"></i></span>
                                 </div>
-                            </div>
+                            </div>*@
                             <div class="pcoded-navigatio-lavel" data-i18n="nav.category.navigation">Menu</div>
                             <ul class="pcoded-item pcoded-left-item">
                                 <li class="">    <a href="index.html">        <span class="pcoded-micon"><i class="ti-home"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Dashboard</span>        <span class="pcoded-mcaret"></span>    </a></li>
@@ -490,6 +496,20 @@
     <script type="text/javascript" src="~/bower_components/jquery-i18next/js/jquery-i18next.min.js"></script>
     <!-- Custom js -->
     <script type="text/javascript" src="~/assets/pages/dashboard/project-dashboard.js"></script>
+    <script src="~/assets/pages/data-table/js/data-table-custom.js"></script>
+
+    <!-- data-table js -->
+    <script src="~/bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="~/bower_components/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+    <script src="~/assets/pages/data-table/js/jszip.min.js"></script>
+    <script src="~/assets/pages/data-table/js/pdfmake.min.js"></script>
+    <script src="~/assets/pages/data-table/js/vfs_fonts.js"></script>
+    <script src="~/bower_components/datatables.net-buttons/js/buttons.print.min.js"></script>
+    <script src="~/bower_components/datatables.net-buttons/js/buttons.html5.min.js"></script>
+    <script src="~/bower_components/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
+    <script src="~/bower_components/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
+    <script src="~/bower_components/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
+
 
     <script type="text/javascript" src="~/assets/js/SmoothScroll.js"></script>
     <script src="~/assets/js/pcoded.min.js"></script>
@@ -497,8 +517,6 @@
     <script src="~/assets/js/jquery.mCustomScrollbar.concat.min.js"></script>
     <script type="text/javascript" src="~/assets/js/script.js"></script>
 
-    @*<script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
