--- a/SisFiespApplication/Views/Usuarios/Index.cshtml
+++ b/SisFiespApplication/Views/Usuarios/Index.cshtml
@@ -5,44 +5,95 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<div class="page-wrapper">
+    <!-- Page-header start -->
+    <div class="page-header card">
+        <div class="row align-items-end">
+            <div class="col-lg-8">
+                <div class="page-header-title">
+                    <i class="icofont icofont-student-alt bg-c-blue"></i>
+                    <div class="d-inline">
+                        <h4>Usuários</h4>
+                        <span>Lista dos Usuários</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="page-header-breadcrumb">
+                    <ul class="breadcrumb-title">
+                        <li class="breadcrumb-item">
+                            <a href="index.html">
+                                <i class="icofont icofont-home"></i>
+                            </a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a href="#!">Usuários</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a href="#!">Lista de Usuários</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Page-header end -->
+    <!-- Page-body start -->
+    <div class="page-body">
+        <div class="row">
+            <div class="col-sm-12">
+                <!-- Zero config.table start -->
+                <div class="card">
+                    <div class="card-header">
+                        <div class="card-header-right">
+                            <i class="icofont icofont-spinner-alt-5"></i>
+                        </div>
+                    </div>
+                    <div class="card-block">
+                        <div class="dt-responsive table-responsive">
+                            <table id="simpletable"
+                                   class="table table-striped table-bordered nowrap">
+                                <thead>
+                                    <tr role="row"><th class="sorting_asc" tabindex="0" aria-controls="simpletable" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Name: activate to sort column descending" style="width: 10px;"><button style="float:right" class="btn btn-success btn-circle bt_acao" type="button" title="Incluir Avaliação" data-toggle="modal" data-target="#large-Modal"><i class="icofont icofont-ui-add"></i></th><th class="sorting_asc" tabindex="0" aria-controls="simpletable" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Name: activate to sort column descending" style="width: 300px;">@Html.DisplayNameFor(model => model.Nome)</th><th class="sorting" tabindex="0" aria-controls="simpletable" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 225px;">@Html.DisplayNameFor(model => model.Login)</th><th class="sorting" tabindex="0" aria-controls="simpletable" rowspan="1" colspan="1" aria-label="Office: activate to sort column ascending" style="width: 206px;">@Html.DisplayNameFor(model => model.Funcao)</th><th class="sorting" tabindex="0" aria-controls="simpletable" rowspan="1" colspan="1" aria-label="Age: activate to sort column ascending" style="width: 200px;">@Html.DisplayNameFor(model => model.Status)</th></tr>
+                                </thead>
+                                <tbody>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Login)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Senha)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Login)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Senha)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Codigo">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Codigo">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Codigo">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+                                    @foreach (var item in Model)
+                                    {
+                                        <tr role="row" class="odd">
+                                            <td><button style="float:none" class="btn-warning btn-circle bt_acao" type="button" title="Editar Usuário"> <i class="icofont icofont-ui-edit"></i></button>                    <button asp-route-id="@item.Codigo" style="float:none" class="btn-danger btn-circle bt_acao" type="button" title="Excluir Usuário"><i class="icofont icofont-ui-close"></i></button></td>
+                                            <td class="sorting_1">
+                                                @Html.DisplayFor(modelItem => item.Nome)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Login)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Funcao)
+                                            </td>
+                                            <td>
+                                                @{ if (item.Status == 1)
+                                                    {
+                                                        @Html.Raw("Ativo");
+                                                    }
+                                                    else
+                                                    {
+                                                        @Html.Raw("Inativo");
+                                                    }
+                                                }
+                                            </td>
+
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+    <!-- Page-body end -->
+</div>
+@await Html.PartialAsync("modal_incluir.cshtml");
