Editar e excluir usuário

--- a/SisFiespApplication/Views/Shared/_Layout.cshtml
+++ b/SisFiespApplication/Views/Shared/_Layout.cshtml
@@ -522,6 +522,8 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="../Views/js/usuario.js"></script>
+
     @RenderSection("Scripts", required: false)
 </body>
 
