--- a/SisFiespApplication/Views/Usuarios/Edit.cshtml
+++ b/SisFiespApplication/Views/Usuarios/Edit.cshtml
@@ -2,43 +2,137 @@
 
 @{
     ViewData["Title"] = "Edit";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<input type="hidden" id="idUsuario" value="@Model.Codigo">
 
-<h1>Edit</h1>
-
-<h4>Usuario</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Codigo" />
-            <div class="form-group">
-                <label asp-for="Login" class="control-label"></label>
-                <input asp-for="Login" class="form-control" />
-                <span asp-validation-for="Login" class="text-danger"></span>
+<div class="page-wrapper" id="pagina">
+    <!-- Page-header start -->
+    <div class="page-header card">
+        <div class="row align-items-end">
+            <div class="col-lg-8">
+                <div class="page-header-title">
+                    <i class="icofont icofont-student-alt bg-c-blue"></i>
+                    <div class="d-inline">
+                        <h4>Usuários</h4>
+                        <span>Incluir Usuário</span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Senha" class="control-label"></label>
-                <input asp-for="Senha" class="form-control" />
-                <span asp-validation-for="Senha" class="text-danger"></span>
+            <div class="col-lg-4">
+                <div class="page-header-breadcrumb">
+                    <ul class="breadcrumb-title">
+                        <li class="breadcrumb-item">
+                            <a href="index.html">
+                                <i class="icofont icofont-home"></i>
+                            </a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a href="#!">Usuários</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a href="#!">Incluir Usuários</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
+    <!-- Page-header end -->
+    <!-- Page-body start -->
+    <div class="page-body">
+        <div class="row">
+            <div class="col-sm-12">
+                <!-- Zero config.table start -->
+                <div class="card">
+                    <div class="card-header">
+                        <div class="card-header-right">
+                            <i class="icofont icofont-spinner-alt-5"></i>
+                        </div>
+                    </div>
+                    <div class="card-block">
+                        <form asp-action="Create">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+                            <div class="form-group col-sm-8 col-xl-8 m-b-30">
+                                <h1 class="sub-title">Nome:</h1>
+                                <input id="nomeUsuario" class="form-control" value="@Model.Nome" />
+
+                            </div>
+                            <div class="form-group col-sm-8 col-xl-8 m-b-30">
+                                <h1 class="sub-title">Login:</h1>
+                                <input id="loginUsuario" class="form-control" value="@Model.Login" />
+
+                            </div>
+                            <div class="form-group col-sm-8 col-xl-4 m-b-30">
+                                <h1 class="sub-title">Senha:</h1>
+                                <input id="senhaUsuario" class="form-control" type="password" value="@Model.Senha" /> <div><input type="checkbox" id="checkSenha" onclick="mostrarSenha()" /> Mostrar senha</div>
+                            </div>
+                            <div class="form-group col-sm-8 col-xl-4 m-b-30">
+                                <h1 class="sub-title">Confirmação Senha:</h1>
+                                <input id="senhaConfirmacaoUsuario" class="form-control" type="password" value="@Model.Senha" /><div><input type="checkbox" id="checkConfirmarSenha" onclick="mostrarSenhaConfirma()" /> Mostrar senha</div>
+
+                            </div>
+                            <div class="form-group col-sm-8 col-xl-8 m-b-30">
+                                <h1 class="sub-title">Email:</h1>
+                                <input id="emailUsuario" class="form-control" value="@Model.Email" />
+
+                            </div>
+                            @{
+
+                                <div class="col-sm-12 col-xl-3 m-b-30">
+                                    <h1 class="sub-title">Função:</h1>
+                                    <select id="funcaoUsuario" class="form-control form-control-primary">
+                                        @if (Model.Funcao == 1)
+                                        {
+                                            <option selected="selected" value="1">Especialista</option>
+                                        }
+                                        else
+                                        {
+                                            <option value="1">Especialista</option>
+                                        }
+                                        @if (Model.Funcao == 2)
+                                        {
+                                            <option selected="selected" value="2">Professor(a)</option>
+                                        }
+                                        else
+                                        {
+                                            <option value="2">Professor(a)</option>
+                                        }
+                                        @if (Model.Funcao == 3)
+                                        {
+                                            <option selected="selected" value="3">Diretor(a)</option>
+                                        }
+                                        else
+                                        {
+                                            <option value="3">Diretor(a)</option>
+                                        }
+
+
+
+
+                                    </select>
+                                </div>
+                            }
+
+                            <div class="form-group">
+                                <input style="float:right;margin-right:10px" type="button" id="btCancelarUsuario" value="Cancelar" onclick="location.href='@Url.Action("Index", "Usuarios")'" class="btn btn-danger" />
+                                <input style="float:right;margin-right:10px" type="button" onclick="salvarUsuarioEdit()" value="Salvar" class="btn btn-primary" />
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+<script>
+
+    
+</script>
