--- a/SisFiespApplication/Views/Shared/_Layout.cshtml
+++ b/SisFiespApplication/Views/Shared/_Layout.cshtml
@@ -144,7 +144,7 @@
                             <li class="user-profile header-notification">
                                 <a href="#!">
                                     <img src="~/assets/images/avatar-8.jpg" class="img-radius" alt="User-Profile-Image">
-                                    <span>Maria Eduarda</span>
+                                    <span>@ViewData["Usuario"]</span>
                                     <i class="ti-angle-down"></i>
                                 </a>
                                 <ul class="show-notification profile-notification">
@@ -169,7 +169,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="auth-normal-sign-in.html">
+                                        <a  asp-action="Logout" asp-controller="Login">
                                             <i class="ti-layout-sidebar-left"></i> Logout
                                         </a>
                                     </li>
