--- a/SisFiespApplication/Views/Usuarios/Create.cshtml
+++ b/SisFiespApplication/Views/Usuarios/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SisFiespApplication.Models.Usuario
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Novo Usuário";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
