--- a/SisFiespApplication/Views/Shared/_Layout.cshtml
+++ b/SisFiespApplication/Views/Shared/_Layout.cshtml
@@ -169,7 +169,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a  asp-action="Logout" asp-controller="Login">
+                                        <a asp-action="Logout" asp-controller="Login">
                                             <i class="ti-layout-sidebar-left"></i> Logout
                                         </a>
                                     </li>
@@ -426,25 +426,15 @@
                         <div class="sidebar_toggle"><a href="#"><i class="icon-close icons"></i></a></div>
                         <div class="pcoded-inner-navbar main-menu">
                             <div class="">
-
                             </div>
-                            @*<div class="pcoded-search">
-                                    <span class="searchbar-toggle">  </span>
-                                    <div class="pcoded-search-box ">
-                                        <input type="text" placeholder="Pesquisar">
-                                        <span class="search-icon"><i class="ti-search" aria-hidden="true"></i></span>
-                                    </div>
-                                </div>*@
                             <div class="pcoded-navigatio-lavel" data-i18n="nav.category.navigation">Menu</div>
                             <ul class="pcoded-item pcoded-left-item">
                                 <li class="">    <a href="index.html">        <span class="pcoded-micon"><i class="ti-home"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Dashboard</span>        <span class="pcoded-mcaret"></span>    </a></li>
-                                <li class="">    <a href="escola.html">        <span class="pcoded-micon"><i class="icofont icofont-hat"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Escolas</span>        <span class="pcoded-mcaret"></span>    </a></li>
+                                <li class="">    <a asp-area="" asp-controller="Escolas" asp-action="Index" id="menuEscola">        <span class="pcoded-micon"><i class="icofont icofont-hat"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Escolas</span>        <span class="pcoded-mcaret"></span>    </a></li>
                                 <li class="">    <a href="aluno.html">        <span class="pcoded-micon"><i class="icofont icofont-group-students"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Alunos</span>        <span class="pcoded-mcaret"></span>    </a></li>
                                 <li class="">    <a href="avaliacao.html">        <span class="pcoded-micon"><i class="icofont icofont-paper"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Avaliações</span>        <span class="pcoded-mcaret"></span>    </a></li>
                                 <li class="">    <a asp-area="" asp-controller="Usuarios" asp-action="Index" id="menuUsuario">        <span class="pcoded-micon"><i class="icofont icofont-student-alt"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Usuários</span>        <span class="pcoded-mcaret"></span>    </a></li>
-
                             </ul>
-
                         </div>
                     </nav>
                     <div class="pcoded-content">
@@ -522,7 +512,8 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script type="text/javascript" src="../Views/js/usuario.js"></script>
+    <script src="~/js/usuario.js" asp-append-version="true"></script>
+    <script src="~/js/escola.js" asp-append-version="true"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
