--- a/SisFiespApplication/Views/Shared/_Layout.cshtml
+++ b/SisFiespApplication/Views/Shared/_Layout.cshtml
@@ -431,7 +431,7 @@
                             <ul class="pcoded-item pcoded-left-item">
                                 <li class="">    <a href="index.html">        <span class="pcoded-micon"><i class="ti-home"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Dashboard</span>        <span class="pcoded-mcaret"></span>    </a></li>
                                 <li class="">    <a asp-area="" asp-controller="Escolas" asp-action="Index" id="menuEscola">        <span class="pcoded-micon"><i class="icofont icofont-hat"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Escolas</span>        <span class="pcoded-mcaret"></span>    </a></li>
-                                <li class="">    <a href="aluno.html">        <span class="pcoded-micon"><i class="icofont icofont-group-students"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Alunos</span>        <span class="pcoded-mcaret"></span>    </a></li>
+                                <li class="">    <a asp-controller="Alunos" asp-action="Index" id="menuAlunos">        <span class="pcoded-micon"><i class="icofont icofont-group-students"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Alunos</span>        <span class="pcoded-mcaret"></span>    </a></li>
                                 <li class="">    <a href="avaliacao.html">        <span class="pcoded-micon"><i class="icofont icofont-paper"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Avaliações</span>        <span class="pcoded-mcaret"></span>    </a></li>
                                 <li class="">    <a asp-area="" asp-controller="Usuarios" asp-action="Index" id="menuUsuario">        <span class="pcoded-micon"><i class="icofont icofont-student-alt"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Usuários</span>        <span class="pcoded-mcaret"></span>    </a></li>
                             </ul>
@@ -503,6 +503,12 @@
     <script src="~/bower_components/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
     <script src="~/bower_components/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
 
+    <!-- Masking js -->
+    <script src="~/assets/pages/form-masking/inputmask.js"></script>
+    <script src="~/assets/pages/form-masking/jquery.inputmask.js"></script>
+    <script src="~/assets/pages/form-masking/autoNumeric.js"></script>
+    <script src="~/assets/pages/form-masking/form-mask.js"></script>
+
 
     <script type="text/javascript" src="~/assets/js/SmoothScroll.js"></script>
     <script src="~/assets/js/pcoded.min.js"></script>
@@ -514,7 +520,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/usuario.js" asp-append-version="true"></script>
     <script src="~/js/escola.js" asp-append-version="true"></script>
-
+    <script src="~/js/aluno.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
 
